[package]
name = "accudo-config"
description = "Accudo config"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
accudo-crypto = { workspace = true }
accudo-global-constants = { workspace = true }
accudo-logger = { workspace = true }
accudo-secure-storage = { workspace = true }
accudo-short-hex-str = { workspace = true }
accudo-temppath = { workspace = true }
accudo-transaction-filters = { workspace = true }
accudo-types = { workspace = true }
arr_macro = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
cfg-if = { workspace = true }
get_if_addrs = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
poem-openapi = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_merge = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
accudo-crypto = { workspace = true }
accudo-types = { workspace = true, features = ["fuzzing"] }
tempfile = { workspace = true }

[features]
default = []
failpoints = []
fuzzing = ["accudo-crypto/fuzzing", "accudo-types/fuzzing"]
smoke-test = []
testing = []
tokio-console = []

[package.metadata.cargo-machete]
ignored = ["strum"]
