[package]
name = "accudo-mempool"
description = "Accudo mempool for consuming incoming transactions"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
accudo-bounded-executor = { workspace = true }
accudo-channels = { workspace = true }
accudo-config = { workspace = true }
accudo-consensus-types = { workspace = true }
accudo-crypto = { workspace = true }
accudo-event-notifications = { workspace = true }
accudo-infallible = { workspace = true }
accudo-logger = { workspace = true }
accudo-mempool-notifications = { workspace = true }
accudo-metrics-core = { workspace = true }
accudo-netcore = { workspace = true }
accudo-network = { workspace = true }
accudo-peer-monitoring-service-types = { workspace = true }
accudo-runtimes = { workspace = true }
accudo-short-hex-str = { workspace = true }
accudo-storage-interface = { workspace = true }
accudo-time-service = { workspace = true }
accudo-transaction-filters = { workspace = true }
accudo-types = { workspace = true }
accudo-vm-validator = { workspace = true }
bcs = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
accudo-compression = { workspace = true }
accudo-config = { workspace = true }
accudo-id-generator = { workspace = true }
accudo-network = { workspace = true, features = ["fuzzing"] }
accudo-storage-interface = { workspace = true, features = ["fuzzing"] }
accudo-time-service = { workspace = true, features = ["testing"] }
accudo-transaction-filters = { workspace = true, features = ["fuzzing"] }
enum_dispatch = { workspace = true }
proptest = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints", "accudo-vm-validator/failpoints"]
fuzzing = ["proptest", "accudo-types/fuzzing", "accudo-storage-interface/fuzzing", "accudo-config/fuzzing"]
consensus-only-perf-test = []
