[package]
name = "accudo-comparison-testing"
version = "0.1.0"
authors = ["Accudo Labs <opensource@accudo.org>"]
description = "A tool to perform comparison testing on the compiler"
repository = "https://github.com/accudo-labs/accudo-core"
homepage = "https://accudo.org"
license = "Apache-2.0"
publish = false
edition = { workspace = true }
default-run = "accudo-comparison-testing"

[dependencies]
anyhow = { workspace = true }
accudo-block-executor = { workspace = true }
accudo-framework = { workspace = true }
accudo-language-e2e-tests = { workspace = true }
accudo-rest-client = { workspace = true }
accudo-transaction-simulation = { workspace = true }
accudo-types = { workspace = true }
accudo-validator-interface = { workspace = true }
accudo-vm = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
legacy-move-compiler = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-model = { workspace = true }
move-package = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
