[package]
name = "accudo-gas-meter"
description = "Gas meter implementation for the Accudo blockchain"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
accudo-gas-algebra = { workspace = true }
accudo-gas-schedule = { workspace = true }
accudo-logger = { workspace = true }
accudo-types = { workspace = true }
accudo-vm-types = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
