[package]
name = "accudo-release-builder"
description = "Tooling for building the governance proposal script used for the network"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
accudo = { workspace = true, features = [ "no-upload-proposal" ] }
accudo-build-info = { workspace = true }
accudo-crypto = { workspace = true }
accudo-framework = { workspace = true }
accudo-gas-profiling = { workspace = true }
accudo-gas-schedule = { workspace = true }
accudo-gas-schedule-updator = { workspace = true }
accudo-genesis = { workspace = true }
accudo-infallible = { workspace = true }
accudo-keygen = { workspace = true }
accudo-language-e2e-tests = { workspace = true }
accudo-move-debugger = { workspace = true }
accudo-rest-client = { workspace = true }
accudo-temppath = { workspace = true }
accudo-transaction-simulation = { workspace = true }
accudo-types = { workspace = true }
accudo-vm = { workspace = true }
accudo-vm-environment = { workspace = true }
accudo-vm-logging = { workspace = true }
accudo-vm-types = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
handlebars = { workspace = true }
hex = { workspace = true }
move-binary-format = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-core-types = { workspace = true }
move-model = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

[[bin]]
name = "accudo-release-builder"
path = "src/main.rs"
