[package]
name = "accudo-transaction-benchmarks"
description = "Accudo transaction benchmarks"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
accudo-bitvec = { workspace = true }
accudo-block-executor = { workspace = true }
accudo-block-partitioner = { workspace = true }
accudo-crypto = { workspace = true }
accudo-language-e2e-tests = { workspace = true }
accudo-logger = { workspace = true }
accudo-metrics-core = { workspace = true }
accudo-node-resource-metrics = { workspace = true }
accudo-push-metrics =  { workspace = true }
accudo-transaction-simulation = { workspace = true }
accudo-types = { workspace = true }
accudo-vm = { workspace = true }
accudo-vm-logging = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
criterion-cpu-time = { workspace = true }
num_cpus = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "transaction_benches"
harness = false
