[package]
name = "accudo-transaction-simulation-session"
description = "Accudo Transaction Simulation Session"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

move-core-types = { workspace = true }

accudo-api-types = { workspace = true }
accudo-resource-viewer = { workspace = true }
accudo-rest-client = { workspace = true }
accudo-transaction-simulation = { workspace = true }
accudo-types = { workspace = true }
accudo-validator-interface = { workspace = true }
accudo-vm = { workspace = true }
accudo-vm-environment = { workspace = true }
accudo-vm-logging = { workspace = true }
accudo-vm-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
