[package]
name = "accudo-transactional-test-harness"
description = "Transactional testing framework for Move"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
accudo-api-types = { workspace = true }
accudo-block-executor = { workspace = true }
accudo-cached-packages = { workspace = true }
accudo-crypto = { workspace = true }
accudo-framework = { workspace = true }
accudo-gas-schedule = { workspace = true }
accudo-resource-viewer = { workspace = true }
accudo-storage-interface = { workspace = true }
accudo-transaction-simulation = { workspace = true }
accudo-types = { workspace = true, features = ["fuzzing"] }
accudo-vm = { workspace = true }
accudo-vm-environment = { workspace = true }
accudo-vm-genesis = { workspace = true }
accudo-vm-types = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
codespan-reporting = { workspace = true }
hex = { workspace = true }
move-binary-format = { workspace = true, features = ["fuzzing"] }
move-bytecode-verifier = { workspace = true }
move-command-line-common = { workspace = true }
move-compiler-v2 = { workspace = true }
move-core-types = { workspace = true, features = ["fuzzing"] }
move-model = { workspace = true }
move-symbol-pool = { workspace = true }
move-transactional-test-runner = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
accudo-types = { workspace = true, features = ["fuzzing"] }
datatest-stable = { workspace = true }

[[test]]
name = "tests"
harness = false
