[package]
name = "accudo-vm-benchmarks"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
accudo-cached-packages = { workspace = true }
accudo-framework = { workspace = true }
accudo-language-e2e-tests = { workspace = true }
accudo-types = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
