[package]
name = "accudo-vm-environment"
description = "Accudo VM environment"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
accudo-framework = { workspace = true }
accudo-gas-algebra = { workspace = true }
accudo-gas-schedule = { workspace = true }
accudo-move-stdlib = { workspace = true }
accudo-native-interface = { workspace = true }
accudo-table-natives = { workspace = true }
accudo-types = { workspace = true }
accudo-vm-types = { workspace = true }
bcs = { workspace = true }
move-binary-format = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
once_cell = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
accudo-types = { workspace = true, features = ["testing", "fuzzing"] }
serde = { workspace = true }
