[package]
name = "accudo-vm-logging"
description = "Accudo VM speculative logging utility"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
accudo-crypto = { workspace = true }
accudo-logger = { workspace = true }
accudo-metrics-core = { workspace = true }
accudo-speculative-state-helper = { workspace = true }
accudo-types = { workspace = true }
arc-swap = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
