[package]
name = "accudo-vm"
description = "Accudo VM runtime"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
accudo-aggregator = { workspace = true }
accudo-block-executor = { workspace = true }
accudo-crypto = { workspace = true }
accudo-crypto-derive = { workspace = true }
accudo-experimental-runtimes = { workspace = true }
accudo-framework =  { workspace = true }
accudo-gas-algebra = { workspace = true }
accudo-gas-meter = { workspace = true }
accudo-gas-schedule = { workspace = true }
accudo-logger = { workspace = true }
accudo-memory-usage-tracker = { workspace = true }
accudo-metrics-core = { workspace = true }
accudo-mvhashmap = { workspace = true }
accudo-native-interface = { workspace = true }
accudo-table-natives = { workspace = true }
accudo-types = { workspace = true }
accudo-vm-environment = { workspace = true }
accudo-vm-logging = { workspace = true }
accudo-vm-types = { workspace = true }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
claims = { workspace = true }
crossbeam-channel = { workspace = true }
derive_more = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-unit-test = { workspace = true, optional = true }
move-vm-metrics = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
ouroboros = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
triomphe = { workspace = true }

[dev-dependencies]
accudo-aggregator = { workspace = true, features = ["testing"] }
accudo-block-executor = { workspace = true, features = ["testing"] }
accudo-block-partitioner = { workspace = true }
accudo-keygen = { workspace = true }
accudo-language-e2e-tests = { workspace = true }
accudo-transaction-simulation = { workspace = true }
accudo-types = { workspace = true, features = ["fuzzing", "testing"] }
claims = { workspace = true }
move-vm-types = { workspace = true, features = ["testing"] }
proptest = { workspace = true }
rand_core = { workspace = true }
test-case = { workspace = true }

[features]
default = []
fuzzing = ["move-core-types/fuzzing", "move-binary-format/fuzzing", "move-vm-types/fuzzing", "accudo-framework/fuzzing", "accudo-types/fuzzing"]
failpoints = ["fail/failpoints", "move-vm-runtime/failpoints"]
testing = ["move-unit-test", "accudo-framework/testing"]
