[package]
name = "accudo-workspace-server"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# accudo deps
accudo-cached-packages = { workspace = true }
accudo-config = { workspace = true }
accudo-faucet-core = { workspace = true }
accudo-localnet = { workspace = true }
accudo-node = { workspace = true }
accudo-types = { workspace = true }

# third party deps
anyhow = { workspace = true }
bollard = { workspace = true }
clap = { workspace = true }
diesel = { workspace = true, features = ["postgres_backend"] }
diesel-async = { workspace = true }
futures = { workspace = true }
maplit = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# indexer deps
accudo-indexer-processor-sdk = { workspace = true }
processor = { workspace = true }
