[package]
name = "accudo-move-e2e-benchmark"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
accudo-cached-packages = { workspace = true }
accudo-crypto = { workspace = true }
accudo-gas-algebra = { workspace = true }
accudo-gas-profiling = { workspace = true }
accudo-language-e2e-tests = { workspace = true }
accudo-logger = { workspace = true }
accudo-sdk = { workspace = true }
accudo-transaction-generator-lib = { workspace = true }
accudo-transaction-workloads-lib = { workspace = true }
accudo-types = { workspace = true }
accudo-vm-environment = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
e2e-move-tests = { path = "../e2e-move-tests" }
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
