[package]
name = "e2e-move-tests"
description = "Move e2e tests"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
accudo-cached-packages = { workspace = true }
accudo-crypto = { workspace = true }
accudo-framework = { workspace = true }
accudo-gas-algebra = { workspace = true }
accudo-gas-profiling = { workspace = true }
accudo-gas-schedule = { workspace = true, features = ["testing"] }
accudo-language-e2e-tests = { workspace = true }
accudo-package-builder = { workspace = true }
accudo-rest-client = { workspace = true }
accudo-sdk = { workspace = true }
accudo-transaction-simulation = { workspace = true }
accudo-types = { workspace = true }
accudo-vm = { workspace = true, features = ["testing"] }
accudo-vm-environment = { workspace = true }
bcs = { workspace = true }
claims = { workspace = true }
hex = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-model = { workspace = true }
move-package = { workspace = true }
move-symbol-pool = { workspace = true }
once_cell = { workspace = true }
project-root = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
test-case = { workspace = true }

[dev-dependencies]
accudo-vm-types = { workspace = true }
claims = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true }

[lib]
doctest = false
