[package]
name = "language-e2e-testsuite"
description = "Move language e2e tests"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
accudo-cached-packages = { workspace = true }
accudo-crypto = { workspace = true }
accudo-gas-algebra = { workspace = true }
accudo-gas-schedule = { workspace = true, features = ["testing"] }
accudo-language-e2e-tests = { workspace = true }
accudo-logger = { workspace = true }
accudo-transaction-simulation = { workspace = true }
accudo-types = { workspace = true }
accudo-vm = { workspace = true, features = ['failpoints'] }
accudo-vm-genesis = { workspace = true }
claims = { workspace = true }
fail = { workspace = true, features = ['failpoints'] }
move-binary-format = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-core-types = { workspace = true }
move-ir-compiler = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }

[features]
default = [
    "accudo-cached-packages/fuzzing",
    "move-core-types/fuzzing",
    "accudo-types/fuzzing",
]
